--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-helloWorld
+<!DOCTYPE html>
+<html>
+    <body>
+    <h1> my first heading </h1>
+    <p> my first paragraph </p>
+    </body>
+</html>
