--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <body>
     <h1> my first heading </h1>
     <p> my first paragraph </p>
-    <IMG SRC="images\four-pandas-ss-1920-800x450.jpg" ALT="some text" WIDTH=800 HEIGHT=450>
+    <IMG SRC="images\scribble.jpg" ALT="some text" WIDTH=1152 HEIGHT=648>
     </body>
 </html>
