--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <style>
+            body {background-color:lightgrey;}
+            h1   {color:blue;}
+            p    {color:green;}
+        </style>
+    </head>
     <body>
-    <h1> my first heading </h1>
-    <p> my first paragraph </p>
-    <IMG SRC="images\scribble.jpg" ALT="some text" WIDTH=1152 HEIGHT=648>
+        <h1> my first heading </h1>
+        <p> my first paragraph </p>
+        <IMG SRC="images\scribble.jpg" ALT="some text" WIDTH=1152 HEIGHT=648>
     </body>
 </html>
