--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            body {background-color:lightgrey;}
-            h1   {color:blue;}
-            p    {color:green;}
-        </style>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1> my first heading </h1>
