--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1> my first heading </h1>
         <p> my first paragraph </p>
         <IMG SRC="images\scribble.jpg" ALT="some text" WIDTH=1152 HEIGHT=648>
+        <a href = "newPage.html">newpage</a>
     </body>
 </html>
