--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1> my first heading </h1>
         <p> my first paragraph </p>
-        <IMG SRC="images\scribble.jpg" ALT="some text" WIDTH=1152 HEIGHT=648>
+        <IMG SRC="images\scribble.jpg" ALT="some text" WIDTH=1152 HEIGHT=648></IMG>
         <a href = "newPage.html">newpage</a>
     </body>
 </html>
