--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h2> my first heading </h2>
         <p> my first paragraph </p>
-        <a href = "http://www.starbucks.co.uk">starbucks</a>
+        <p><a href = "http://www.starbucks.co.uk">starbucks</a></p>
         <IMG SRC="images\scribble.jpg" ALT="some text" WIDTH=800 HEIGHT=400></IMG>
     </body>
 </html>
