--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <h2> my first heading </h2>
         <p> my first paragraph </p>
         <p><b><a href = "http://www.starbucks.co.uk">starbucks</a></b></p>
+        <p> equation E=mc<sup>2</sup></p>
+        <p> A greenhouse gas is CO<sub>2</sub></p>
         <IMG SRC="images\scribble.jpg" ALT="some text" WIDTH=800 HEIGHT=400></IMG>
     </body>
 </html>
