--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <p><b><a href = "http://www.starbucks.co.uk">starbucks</a></b></p>
         <p> equation E=mc<sup>2</sup></p>
         <p> A greenhouse gas is CO<sub>2</sub></p>
-        <p> <abbr title="Professor">Prof</abbr></p>
+        <p> <abbr title="Professor">Prof</abbr> M.J.</p>
         <IMG SRC="images\scribble.jpg" ALT="some text" WIDTH=800 HEIGHT=400></IMG>
     </body>
 </html>
